# eigen_sparse_mpi

./: Makefile.am  README.md  config.h.in  configure.ac
src/: Makefile.am  distributed_sparse_matrix.cpp  distributed_sparse_matrix.h  mpi_alltoallv2.cpp  mpi_alltoallv2.h
test/: Makefile.am  sparse_test.cpp
